--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,36 @@
-{
+{  "compilerOptions": {
+  // Required in Vue projects
+  "jsx": "preserve",
+  "jsxImportSource": "vue",
+  // used true with strict mode to prevent using any type
+  "noImplicitAny": false,
+  "noEmit": false,
+  // this aligns with Vue's browser support
+  "target": "ES6",
+  // this enables stricter inference for data properties on `this`
+  "strict": true,
+  // if using webpack 2+ or rollup, to leverage tree shaking:
+  "module": "ES2020",
+  "moduleResolution": "node",
+  "useDefineForClassFields": true,
+  "lib": ["DOM", "ES6", "DOM.Iterable", "ESNext"],
+  "allowJs": false,
+  "checkJs": false,
+  "skipLibCheck": false,
+  "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true,
+  "forceConsistentCasingInFileNames": true,
+  "resolveJsonModule": true,
+  "isolatedModules": true,
+  "importHelpers": true,
+  "noUnusedLocals": true,
+  "noUnusedParameters": true,
+  "experimentalDecorators": true,
+  "types": ["vite/client"],
+  "noEmitOnError": true,
+  "outDir": "./dist",
+  "paths": {"@/*":["./src/*"]}
+},
   "files": [],
   "references": [
     {
