--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/swiper": "^6.0.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "swiper": "^11.0.5",
     "vue": "^3.3.10",
