--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@types/swiper": "^6.0.0",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
-    "swiper": "^11.0.5",
+    "swiper": "^11.0.6",
     "vue": "^3.3.10",
     "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.2.5"
